# sqlite-history-json

./: README.md  change-grouping-demo.md  cli-demo.md  notes.md  plan.md  pyproject.toml  row-state-sql-demo.md
demos/: cli.md  upgrade_demo.md
investigation-transactions/: README.md  notes.md
sqlite_history_json/: __init__.py  __main__.py  cli.py  core.py  datasette_plugin.py  upgrade.py
tests/: test_cli.py  test_datasette_plugin.py  test_row_state_sql.py  test_schema_changes.py  test_sqlite_history_json.py  test_upgrade.py
