[project]
name = "sqlite-history-json"
version = "0.4"
description = "SQLite table history tracking using a JSON audit log"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Simon Willison"}]
license = "Apache-2.0"
classifiers = []
dependencies = [

]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio"
]

[tool.setuptools]
packages = ["sqlite_history_json"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project.entry-points.datasette]
history-json = "sqlite_history_json.datasette_plugin"

[project.urls]
Homepage = "https://github.com/simonw/sqlite-history-json"
Changelog = "https://github.com/simonw/sqlite-history-json/releases"
Issues = "https://github.com/simonw/sqlite-history-json/issues"
CI = "https://github.com/simonw/sqlite-history-json/actions"

